--- a/src/assets/map_test.html
+++ b/src/assets/map_test.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>test4</title>
+    <title>test</title>
     <style>
         *{
             margin: 0;
