--- a/src/assets/map_test2.html
+++ b/src/assets/map_test2.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>test4</title>
+    <title>test2</title>
     <style>
         *{
             margin: 0;
@@ -12,8 +12,7 @@
             width: 100%;
             height: 100%;
         }
-
-        #can{
+        canvas{
             border: 2px solid black;
         }
     </style>
